--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Essentials of Programming Languages》/①/9 对象和类.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Essentials of Programming Languages》/①/9 对象和类.md
@@ -1,6 +1,479 @@
 [toc]
 
+### 详解：对象和类的介绍
 
+**引言**
+
+面向对象编程 (Object-Oriented Programming, OOP) 是一种有效管理程序中状态的编程范式。特别是在程序需要管理多个变量并确保它们一致性更新的场景下，OOP 提供了组织和处理状态的强大方式。
+
+**对象与类**
+
+- **对象 (Object)**：对象是 OOP 的核心单位，是带有多个状态和行为的数据结构。每个对象的状态由其**字段 (field)**（又称属性）来保存，而其行为则由**方法 (method)** 定义。通过调用对象的方法，程序能够修改或查询对象的状态。
+  
+- **类 (Class)**：类是创建对象的模板或蓝图，定义了一类对象应包含的字段和方法。通过类可以创建多个实例对象。每个对象的具体状态是独立的，但它们共享同一类的方法定义。
+  
+  - **实例 (Instance)**：每个通过类创建的对象称为该类的一个实例。实例之间的状态是互相独立的。
+  
+
+**方法与消息传递**
+
+调用对象的方法常被视为通过传递消息的方式进行：即我们向对象发送一条消息，这条消息通常包括**方法名**和**参数**。对象根据接收到的消息，执行相应的方法，这种机制有时称为**消息传递 (message-passing)**。
+
+例如，考虑一个简单的银行账户对象，拥有两个字段：账户余额 (balance) 和账户类型 (accountType)。我们可以通过 `deposit` 方法向账户中存款，通过 `withdraw` 方法取款，这些方法可以看作是向账户对象发送消息，指示它调整其内部状态。
+
+```python
+class BankAccount:
+    def __init__(self, initial_balance):
+        self.balance = initial_balance
+    
+    def deposit(self, amount):
+        self.balance += amount
+        return self.balance
+
+    def withdraw(self, amount):
+        if amount <= self.balance:
+            self.balance -= amount
+            return self.balance
+        else:
+            raise ValueError("Insufficient funds")
+```
+
+在这个例子中，`deposit` 和 `withdraw` 方法允许我们发送消息来更新 `balance` 的状态。
+
+**过程与对象的对比**
+
+在一些有状态语言中，过程 (procedure) 也可以扮演类似对象的角色。我们可以通过闭包 (closure) 将状态与行为绑定在一起。例如，第 4 章中提到的计数器 (counter)，其中的状态包含在自由变量中，且唯一的操作是递增。然而，面向对象编程的优势在于对象可以同时定义多种行为 (方法)，而不仅仅是单一的操作。
+
+```python
+def make_counter():
+    count = 0
+    def increment():
+        nonlocal count
+        count += 1
+        return count
+    return increment
+
+counter = make_counter()
+print(counter())  # 1
+print(counter())  # 2
+```
+
+虽然这个闭包实现了类似于对象的行为（内部保存状态并能更新），但相比面向对象编程，这种方式缺乏对多重行为的直接支持。
+
+**状态与行为的管理**
+
+在更复杂的系统中，我们常常需要管理多重状态。例如，文件系统可能包含多个文件和目录，每个文件或目录都有各自的状态。为了保持系统的一致性，这些状态的修改需要通过一个统一的接口来管理，这正是 OOP 所擅长的。
+
+面向对象编程通过对象和方法，将状态和行为紧密地结合在一起。通过对象，状态可以被很好地封装 (encapsulation)，即外部不能直接访问和修改对象的字段，必须通过对象提供的接口 (方法) 来操作。
+
+**继承与复用**
+
+**继承 (Inheritance)** 是 OOP 中的一个重要概念。继承允许一个类 (子类) 继承另一个类 (父类) 的字段和方法，并可以对其进行扩展或修改。这样，程序员可以通过继承来减少重复代码，同时增加代码的复用性和可维护性。
+
+- **扩展 (extend)**：当我们需要创建一个新类，而新类的大部分功能和行为与现有类相似时，我们可以通过继承来复用原有类的代码，同时在新类中添加新的行为或重写父类的方法。
+  
+
+例如，考虑一个基本的 `Shape` 类，它定义了一个形状的基础行为，而 `Circle` 和 `Rectangle` 类则可以继承 `Shape`，并添加各自特有的行为：
+
+```python
+class Shape:
+    def __init__(self, color):
+        self.color = color
+    
+    def draw(self):
+        print(f"Drawing a shape of color {self.color}")
+
+class Circle(Shape):
+    def __init__(self, color, radius):
+        super().__init__(color)
+        self.radius = radius
+    
+    def draw(self):
+        print(f"Drawing a circle with radius {self.radius} and color {self.color}")
+
+class Rectangle(Shape):
+    def __init__(self, color, width, height):
+        super().__init__(color)
+        self.width = width
+        self.height = height
+    
+    def draw(self):
+        print(f"Drawing a rectangle of {self.width}x{self.height} and color {self.color}")
+```
+
+在这个例子中，`Circle` 和 `Rectangle` 都继承了 `Shape` 的属性和方法，但它们也可以添加自己的属性（例如 `radius`、`width` 和 `height`），并可以重写 `draw` 方法来提供不同的绘制行为。
+
+**面向对象 vs 模块化**
+
+虽然对象和模块看起来相似，因为它们都提供了一种封装和抽象的方式，但它们有几个关键的不同：
+
+1. **对象** 封装的是状态和行为，通常与运行时数据结构紧密结合。多个对象可以是同一个类的实例，而它们各自的状态是独立的。
+   
+2. **模块** 更像是静态的代码组织工具，帮助我们在程序中管理命名空间和依赖关系。模块封装了定义和代码逻辑，通常在编译时使用。虽然一些模块系统（如 `PROC-MODULES`）提供了类似对象的灵活性，但模块本身更多是用于组织代码，而对象则用于组织运行时的数据。
+
+**真实世界类比**
+
+在真实世界中，对象经常兼具状态和行为。例如，猫 (对象) 能执行动作（如吃饭、跳跃），这些动作受它的状态（如饥饿度、能量）影响。同样，程序中的对象也是通过其方法来表现和操作内部状态的。
+
+**总结**
+
+对象和类为我们提供了一种强大、直观的方式来组织代码，特别适用于需要处理多个相互关联状态的场景。通过类的继承和封装特性，我们能够实现代码的重用、扩展和维护。而通过类的实例化，我们可以创建多个独立的对象，管理复杂的系统状态。
+
+下一步将是探讨如何将这些概念付诸实践，创建实际的对象系统，并且展示如何使用类、继承、封装和多态等特性来设计更好的程序。
+
+### -----------------------------------------
+
+### 详解：面向对象编程和动态分发
+
+**面向对象编程 (Object-Oriented Programming, OOP)** 是一种通过组织程序中的数据和行为来解决复杂问题的编程范式。本节介绍了基本的 OOP 概念，展示了通过类定义对象、字段和方法，并引入了动态分发这一关键特性。
+
+---
+
+### 1. **类 (Class) 和对象 (Object)**
+
+类定义了对象的结构和行为。对象是类的实例。每个对象都有自己的字段 (状态) 和方法 (行为)。字段也叫做**实例变量**，方法也称为**成员函数**。
+
+例子中的 `class c1 extends object` 定义了一个继承自 `object` 的类 `c1`。每个 `c1` 类的对象都有两个字段 `i` 和 `j`，以及三个方法：`initialize`、`countup` 和 `getstate`。
+
+- **`initialize` 方法**：用来初始化字段。比如在 `o1 = new c1(3)` 时，`initialize` 方法被调用，设置 `i = 3` 和 `j = -3`。
+- **`countup` 方法**：增加 `i` 和 `j` 的值，保持 `i = -j` 的不变式。
+- **`getstate` 方法**：返回当前 `i` 和 `j` 的值，作为对象的状态。
+
+```text
+class c1 extends object
+  field i
+  field j
+  method initialize(x)
+    begin
+      set i = x
+      set j = -(0, x)
+    end
+  method countup(d)
+    begin
+      set i = +(i, d)
+      set j = -(j, d)
+    end
+  method getstate()
+    list(i, j)
+```
+
+这段代码展示了 OOP 的基本概念。对象通过 `new` 操作符创建，并调用它们的方法来操作内部状态。
+
+**对象创建**：当使用 `new` 创建对象时，调用的是类的构造方法（即 `initialize` 方法），它负责初始化对象的字段。例如，`o1 = new c1(3)` 创建了一个 `c1` 类的对象，并将 `i` 初始化为 `3`，`j` 初始化为 `-3`。
+
+```text
+let o1 = new c1(3)
+```
+
+---
+
+### 2. **继承 (Inheritance)**
+
+继承允许新类基于现有类进行扩展，从而复用代码。新类可以继承父类的字段和方法，并可以重写或扩展它们。通过继承，我们能够组织程序中的对象，使其更具层次性。
+
+例子中的 `class interior-node extends object` 和 `class leaf-node extends object` 定义了树的节点：`interior-node` 表示内部节点，`leaf-node` 表示叶节点。`interior-node` 有两个子节点 (`left` 和 `right`)，并通过 `sum` 方法计算整个子树的和。叶节点只包含一个 `value`，`sum` 方法返回这个值。
+
+```text
+class interior-node extends object
+  field left
+  field right
+  method initialize(l, r)
+    begin
+      set left = l
+      set right = r
+    end
+  method sum()
+    +(send left sum(), send right sum())
+    
+class leaf-node extends object
+  field value
+  method initialize(v)
+    set value = v
+  method sum()
+    value
+```
+
+**动态分发 (Dynamic Dispatch)** 是继承的重要特性。它指的是，当我们向一个对象发送消息（调用方法）时，具体调用哪个方法取决于对象的类型。例如，当调用 `send o1 sum()` 时，程序会自动根据 `o1` 的类型决定调用 `interior-node` 的 `sum` 还是 `leaf-node` 的 `sum`。
+
+**示例：**
+
+```text
+let o1 = new interior-node(
+    new interior-node(
+        new leaf-node(3),
+        new leaf-node(4)),
+    new leaf-node(5)
+)
+in send o1 sum()
+```
+
+这里，`o1` 是一个 `interior-node` 对象，其子节点也是 `interior-node` 和 `leaf-node` 对象。调用 `o1` 的 `sum()` 方法时，会递归调用子节点的 `sum()`，最终计算出叶节点的值和为 `12`。
+
+---
+
+### 3. **动态绑定 (Dynamic Binding)** 和 **`self` 关键字**
+
+在面向对象编程中，方法可以通过 `self` 引用同一对象的其他方法。`self` 是一种特殊的变量，指向当前调用方法的对象。通过 `self`，对象可以在其内部递归调用自身的方法。
+
+在 `class oddeven` 的例子中，`even` 和 `odd` 方法递归地调用彼此。每次递归调用时，`self` 都绑定到当前对象，确保方法能够正确地递归执行。
+
+```text
+class oddeven extends object
+  method initialize() 1
+  method even(n)
+    if zero?(n)
+    then 1
+    else send self odd(-(n, 1))
+  method odd(n)
+    if zero?(n)
+    then 0
+    else send self even(-(n, 1))
+
+let o1 = new oddeven()
+in send o1 odd(13)
+```
+
+在这个例子中，`even` 方法检查 `n` 是否为 0。如果是，则返回 1，否则调用 `odd`。`odd` 方法的逻辑类似，通过 `send self even(...)` 递归调用 `even` 方法。这样，通过 `self`，两个方法能够互相递归调用，直到达到基准条件。
+
+---
+
+### 总结
+
+本节通过一个简单的 OOP 语言 **CLASSES** 介绍了面向对象编程的基本概念，包括类和对象、字段和方法、动态分发、继承以及 `self` 的使用。这些概念构成了面向对象编程的基础，使程序能够通过对象来封装状态和行为，进而实现模块化和可扩展的程序结构。
+
+**关键概念：**
+- **对象 (Object)**：由类创建，包含状态（字段）和行为（方法）。
+- **类 (Class)**：定义了对象的结构和行为。
+- **继承 (Inheritance)**：通过扩展已有类来复用代码。
+- **动态分发 (Dynamic Dispatch)**：在运行时根据对象类型调用相应方法。
+- **`self` (或 `this`)**：指向当前调用方法的对象，使方法能够引用自身对象的其他方法。
+
+### -----------------------------------------
+
+### 详解：继承及其复杂性
+
+**继承**是面向对象编程（OOP）中的重要机制，允许一个类继承另一个类的字段和方法。本节通过逐步深入的例子，介绍继承的基本概念、字段遮蔽（shadowing）、方法覆盖（overriding）、动态分发（dynamic dispatch）、静态方法调用（static method dispatch）以及 `super` 的使用。
+
+---
+
+### 1. **基本继承**
+
+继承允许新类基于现有类进行扩展，从而共享代码和行为。以下是简单的继承例子：
+
+```text
+class point extends object
+  field x
+  field y
+  method initialize (initx, inity)
+    begin
+      set x = initx;
+      set y = inity
+    end
+  method move (dx, dy)
+    begin
+      set x = +(x, dx);
+      set y = +(y, dy)
+    end
+  method get-location () list(x, y)
+```
+
+**解释：**
+- 类 `point` 继承自 `object` 类，它有两个字段 `x` 和 `y`，并提供了 `initialize`、`move` 和 `get-location` 三个方法。
+- `initialize` 方法初始化 `x` 和 `y`，而 `move` 方法则允许我们根据 `dx` 和 `dy` 改变对象的位置。
+
+#### **扩展类**
+
+继承允许我们创建新的类，扩展已有类的功能。例如，`colorpoint` 类继承自 `point`，并增加了一个新的字段 `color` 和相应的访问方法。
+
+```text
+class colorpoint extends point
+  field color
+  method set-color (c) set color = c
+  method get-color () color
+```
+
+**解释：**
+- 类 `colorpoint` 继承了 `point` 类的字段 `x` 和 `y` 以及方法 `move` 和 `get-location`，并且新增了 `color` 字段以及 `set-color` 和 `get-color` 方法，用于操作颜色。
+
+#### **对象创建与使用**
+
+我们可以创建 `point` 和 `colorpoint` 类的对象，并使用这些对象的方法：
+
+```text
+let p = new point(3, 4)
+let cp = new colorpoint(10, 20)
+in begin
+  send p move(3, 4);
+  send cp set-color(87);
+  send cp move(10, 20);
+  list(send p get-location(),  % 返回 (6 8)
+       send cp get-location(), % 返回 (20 40)
+       send cp get-color())    % 返回 87
+end
+```
+
+**解释：**
+- `new point(3, 4)` 创建了一个 `point` 对象 `p`，并初始化其 `x` 和 `y` 为 `3` 和 `4`。
+- `new colorpoint(10, 20)` 创建了一个 `colorpoint` 对象 `cp`，并初始化其 `x` 和 `y` 为 `10` 和 `20`。
+- 通过调用 `move` 方法，`p` 和 `cp` 的位置都被更新，而 `cp` 的颜色通过 `set-color` 方法设置为 `87`。最终，`p` 的位置更新为 `(6, 8)`，`cp` 的位置更新为 `(20, 40)`，颜色为 `87`。
+
+---
+
+### 2. **字段遮蔽 (Field Shadowing)**
+
+字段遮蔽是指当子类重新声明与父类同名的字段时，子类的字段会遮蔽父类的字段。以下是一个展示字段遮蔽的例子：
+
+```text
+class c1 extends object
+  field x
+  field y
+  method initialize () 1
+  method setx1 (v) set x = v
+  method sety1 (v) set y = v
+  method getx1 () x
+  method gety1 () y
+
+class c2 extends c1
+  field y
+  method sety2 (v) set y = v
+  method getx2 () x
+  method gety2 () y
+```
+
+**解释：**
+- 类 `c2` 继承自 `c1`，并重新声明了 `y` 字段。此时，`c2` 的 `y` 字段遮蔽了 `c1` 的 `y` 字段。
+- 在 `c2` 中，方法 `getx2()` 访问 `c1` 的 `x` 字段，而 `gety2()` 访问的是 `c2` 自己的 `y` 字段。
+
+创建对象并调用方法的结果如下：
+
+```text
+let o2 = new c2()
+in begin
+  send o2 setx1(101);
+  send o2 sety1(102);
+  send o2 sety2(999);
+  list(send o2 getx1(), % 返回 101
+       send o2 gety1(), % 返回 102
+       send o2 getx2(), % 返回 101
+       send o2 gety2()) % 返回 999
+end
+```
+
+**解释：**
+- `setx1` 和 `getx1` 方法访问的是 `c1` 的 `x` 字段，结果为 `101`。
+- `sety1` 方法修改了 `c1` 的 `y` 字段，`gety1` 读取这个值，结果为 `102`。
+- `sety2` 和 `gety2` 方法操作的是 `c2` 的 `y` 字段，结果为 `999`。
+
+---
+
+### 3. **方法覆盖 (Method Overriding)**
+
+方法覆盖是指子类可以重新定义父类中的方法，新的方法会覆盖旧的方法。以下是一个方法覆盖的例子：
+
+```text
+class c1 extends object
+  method initialize () 1
+  method m1 () 11
+  method m2 () send self m1()
+
+class c2 extends c1
+  method m1 () 22
+```
+
+**解释：**
+- 类 `c2` 覆盖了 `c1` 的 `m1` 方法。当调用 `c2` 对象的 `m1` 方法时，将返回 `22`，而不是 `11`。
+
+```text
+let o1 = new c1() 
+let o2 = new c2()
+in list(send o1 m1(),   % 返回 11
+         send o2 m1(),   % 返回 22
+         send o2 m2())   % 返回 22
+```
+
+**解释：**
+- 对于 `o1`（`c1` 的实例），调用 `m1` 返回 `11`。
+- 对于 `o2`（`c2` 的实例），调用 `m1` 返回 `22`。
+- `m2` 方法调用了 `m1`，但是由于 `m2` 在 `c2` 中执行，因此调用的是 `c2` 的 `m1` 方法，返回 `22`。
+
+---
+
+### 4. **`super` 调用**
+
+有时，子类希望在覆盖父类方法时仍然保留父类的一些行为。通过使用 `super`，可以在子类方法中调用父类的方法。
+
+```text
+class colorpoint extends point
+  field color
+  method initialize (initx, inity, initcolor)
+    begin
+      super initialize(initx, inity);
+      set color = initcolor
+    end
+```
+
+**解释：**
+- `colorpoint` 覆盖了 `initialize` 方法，同时使用 `super` 调用了 `point` 类的 `initialize` 方法来设置 `x` 和 `y` 字段，而 `color` 字段则由 `colorpoint` 类自己设置。
+- `super` 调用避免了重复代码，并确保父类的初始化逻辑被正确执行。
+
+---
+
+### 5. **静态方法分发 (Static Method Dispatch)**
+
+`super` 调用是静态方法分发的一个例子。静态方法分发与动态分发不同，调用的目标方法在编译时已确定，而不是在运行时根据 `self` 所指对象的类确定。来看一个更复杂的例子：
+
+```text
+class c1 extends object
+  method initialize () 1
+  method m1 () send self m2()
+  method m2 () 13
+
+class c2 extends c1
+  method m1 () 22
+  method m2 () 23
+  method m3 () super m1()
+
+class c3 extends c2
+  method m1 () 32
+  method m2 () 33
+```
+
+在 `c3` 类中，`m3` 方法调用 `super m1()`，而 `m1` 是在 `c2` 中定义的，因此 `super` 调用的是 `c1` 的 `m1` 方法：
+
+```text
+let o3 = new c3()
+in send o3 m3()  % 结果是 22
+```
+
+**解释：**
+- `super m1()` 调用了 `c1` 的 `m1` 方法，尽管 `o3` 是 `c3` 类的实例。
+- 动态分发在 `m1` 中起作用，因此 `send self m2()` 会调用 `c3` 的 `m2`
+
+ 方法，返回 `33`。
+
+---
+
+### 总结
+
+本节通过继承、字段遮蔽、方法覆盖、动态分发以及 `super` 调用等机制，展示了 OOP 的灵活性和复杂性。这些特性使得代码可以更高效地重用，并且通过动态分发，可以实现更灵活的行为。
+
+### -----------------------------------------
+
+
+
+### -----------------------------------------
+
+
+
+### -----------------------------------------
+
+
+
+### -----------------------------------------
+
+
+
+### -----------------------------------------
 
 ### -----------------------------------------
 
@@ -28,32 +501,52 @@
 
 ### -----------------------------------------
 
-### -----------------------------------------
-
-
-
-### -----------------------------------------
-
 
 
 ### -----------------------------------------
 
 
 
-### -----------------------------------------
+
+
+### ----------------------------
 
 
 
-### -----------------------------------------
+### ---------------------------
 
 
 
-### -----------------------------------------
+### ----------------------------
 
 
 
-### -----------------------------------------
+### ---------------------------
 
 
 
-### -----------------------------------------
+### ----------------------------
+
+
+
+### ---------------------------
+
+
+
+### ----------------------------
+
+
+
+### ---------------------------
+
+
+
+### ----------------------------
+
+
+
+### ---------------------------
+
+
+
+### ----------------------------
